# grammar_parser

./: .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: lint.yml
scripts/: visualize
src/grammar_parser/: __init__.py  cfgparser.py
src/grammar_parser/test/: test_cfgparser.py
test/: eegpsr_grammar.fcfg  grammar.fcfg  test_cfgparser.py  test_grammar.py
