<?xml version="1.0"?>
<package format="3">
  <name>grammar_parser</name>
  <version>0.0.1</version>
  <description>The grammar_parser package</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>TODO</license>

  <url type="bugtracker">https://github.com/tue-robotics/grammar_parser/issues</url>
  <url type="repository">https://github.com/tue-robotics/grammar_parser</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>python-yaml</depend>
  <depend>python-graphviz-pip</depend>

  <doc_depend>python-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
