<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grammar_parser</name>
  <version>0.0.1</version>
  <description>The grammar_parser package</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>TODO</license>

  <url type="bugtracker">https://github.com/tue-robotics/grammar_parser/issues</url>
  <url type="repository">https://github.com/tue-robotics/grammar_parser</url>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>rospy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</depend>
  <depend>python-graphviz-pip</depend>

  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
