<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grammar_parser</name>
  <version>0.0.1</version>
  <description>Context free grammar parser tools</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>TODO</license>

  <url type="bugtracker">https://github.com/tue-robotics/grammar_parser/issues</url>
  <url type="repository">https://github.com/tue-robotics/grammar_parser</url>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>rospy</depend>
  <depend>python3-yaml</depend>

  <exec_depend>python-graphviz-pip</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
